home-k8s-cluster/workloads/k8s-prod/manifests/pihole/pihole-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: admin-page-redirect
spec:
  replacePathRegex:
    regex: ^/$
    replacement: /admin/login.php
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress-https
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: pihole-admin-page-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - pihole.home.maxanderson.tech
      secretName: pihole-tls
  rules:
    - host: pihole.home.maxanderson.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pihole-web-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: pihole-https-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: pihole.home.maxanderson.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pihole-web-svc
                port:
                  number: 80
